# cameleon

./: .gitignore  .rustfmt.toml  CODE_OF_COUNDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  test_all.sh
cameleon/: Cargo.toml  README.md
cameleon-device/: Cargo.toml
cameleon-device/examples/u3v/: device_control.rs  device_enumeration.rs
cameleon-device/examples/usb3/: device_control.rs  device_enumeration.rs  emulator.rs  enumerate_device.rs
cameleon-device/src/: lib.rs  pixel_format.rs
cameleon-device/src/u3v/: device_info.rs  mod.rs  register_map.rs
cameleon-device/src/u3v/emulator/: channel.rs  device.rs  mod.rs
cameleon-device/src/u3v/protocol/: ack.rs  cmd.rs  event.rs  mod.rs  parse_util.rs  stream.rs  util.rs
cameleon-device/src/u3v/real/: channel.rs  device.rs  device_builder.rs  mod.rs
cameleon-device/src/usb3/: channel.rs  control_handle.rs  device.rs  device_builder.rs  device_info.rs  mod.rs  register_map.rs
cameleon-device/src/usb3/emulator/: channel.rs  device.rs  memory.rs  memory_protection.rs  mod.rs
cameleon-device/src/usb3/protocol/: ack.rs  cmd.rs  command.rs  event.rs  mod.rs  parse_util.rs
cameleon-device/src/usb3/real/: channel.rs  device.rs  device_builder.rs  mod.rs
cameleon-device/tests/: exceptional_scenario.rs  normal_scenario.rs  test_examples.rs
cameleon-gentl/: Cargo.toml
cameleon-gentl/src/: lib.rs  port.rs
cameleon-gentl/src/device/: mod.rs  u3v.rs  u3v_memory.rs
cameleon-gentl/src/ffi/: device.rs  interface.rs  macros.rs  mod.rs  port.rs  system.rs
cameleon-gentl/src/imp/: genapi_common.rs  mod.rs  port.rs
cameleon-gentl/src/imp/device/: mod.rs  u3v.rs  u3v_genapi.rs  u3v_memory.rs
cameleon-gentl/src/imp/interface/: mod.rs  u3v.rs  u3v_genapi.rs  u3v_memory.rs
cameleon-gentl/src/imp/system/: genapi.rs  memory.rs  mod.rs
cameleon-gentl/src/interface/: mod.rs  u3v.rs  u3v_memory.rs
cameleon-gentl/src/system/: memory.rs  mod.rs
cameleon-impl/: Cargo.toml
cameleon-impl/genapi-parser/: Cargo.toml
cameleon-impl/genapi-parser/src/: boolean.rs  category.rs  command.rs  converter.rs  elem_name.rs  elem_type.rs  enumeration.rs  float.rs  float_reg.rs  group.rs  int_converter.rs  int_reg.rs  int_swiss_knife.rs  integer.rs  lib.rs  masked_int_reg.rs  node.rs  node_base.rs  port.rs  register.rs  register_base.rs  register_description.rs  string.rs  string_reg.rs  struct_reg.rs  swiss_knife.rs  xml.rs
cameleon-impl/macros/: Cargo.toml
cameleon-impl/macros/src/: genapi.rs  lib.rs  memory.rs  register.rs  register_map.rs  util.rs
cameleon-impl/src/: lib.rs  memory.rs
cameleon-impl/src/genapi/: category.rs  elem_type.rs  mod.rs  node.rs  node_base.rs  verifier.rs  xml.rs
cameleon-impl/tests/: register.rs  runner.rs  wrong_ty_attr1.rs
cameleon-impl/tests/macros/: bitfield.rs  forbidden_visibility.rs  genapi.rs  memory.rs  register.rs  visibility.rs  wrong_access_right.rs  wrong_access_right.stderr  wrong_endianess.rs  wrong_endianess.stderr  wrong_endianness.rs  wrong_endianness.stderr  wrong_init_array.rs  wrong_init_array.stderr  wrong_ty_attr.rs  wrong_ty_attr.stderr  wrong_ty_attr1.rs  wrong_ty_attr1.stderr  wrong_ty_attr2.rs
cameleon-macro/: Cargo.toml
cameleon-macro/impl/: Cargo.toml
cameleon-macro/impl/src/: lib.rs  memory.rs  register.rs
cameleon-macro/src/: lib.rs
cameleon-macro/tests/: memory.rs  register.rs  runner.rs  wrong_access_right.rs  wrong_access_right.stderr  wrong_endianess.rs  wrong_ty_attr1.rs  wrong_ty_attr2.rs  wrong_ty_attr2.stderr
cameleon/examples/: README.md  custom_ctxt.rs  no_cache.rs  params.rs  stream.rs
cameleon/examples/device/u3v/: register_map.rs
cameleon/examples/gige/: register_map.rs
cameleon/examples/u3v/: README.md  register_map.rs
cameleon/src/: camera.rs  lib.rs  payload.rs  utils.rs
cameleon/src/device/: mod.rs
cameleon/src/device/u3v/: control_handle.rs  device.rs  mod.rs  (+2 more)
cameleon/src/genapi/: mod.rs  node_kind.rs
cameleon/src/gige/: control_handle.rs  mod.rs  register_map.rs  stream_handle.rs
cameleon/src/u3v/: async_read.rs  control_handle.rs  device.rs  mod.rs  register_map.rs  stream_handle.rs
cameleon/tests/: test_examples.rs
device/: Cargo.toml  README.md
device/examples/u3v/: device_control.rs  device_enumeration.rs
device/src/: lib.rs  pixel_format.rs
device/src/emulator/: channel.rs  device.rs  mod.rs
device/src/gige/: channel.rs  mod.rs  register_map.rs
device/src/u3v/: async_read.rs  channel.rs  device.rs  device_builder.rs  device_info.rs  mod.rs  register_map.rs
device/tests/: normal_scenario.rs  test_examples.rs
genapi/: Cargo.toml  README.md
genapi/src/: boolean.rs  builder.rs  category.rs  command.rs  converter.rs  elem_type.rs  enumeration.rs  float.rs  float_reg.rs  formula.rs  int_converter.rs  int_reg.rs  int_swiss_knife.rs  integer.rs  interface.rs  ivalue.rs  lib.rs  masked_int_reg.rs  node.rs  node_base.rs  node_store.rs  port.rs  register.rs  register_base.rs  register_description.rs  store.rs  string.rs  string_reg.rs  swiss_knife.rs  utils.rs
genapi/src/parser/: boolean.rs  category.rs  command.rs  converter.rs  elem_name.rs  elem_type.rs  enumeration.rs  float.rs  float_reg.rs  formula.rs  group.rs  int_converter.rs  int_reg.rs  int_swiss_knife.rs  integer.rs  masked_int_reg.rs  mod.rs  node.rs  node_base.rs  port.rs  register.rs  register_base.rs  register_description.rs  string.rs  string_reg.rs  struct_reg.rs  swiss_knife.rs  utils.rs  xml.rs
gentl/: Cargo.toml
gentl/src/: lib.rs
gentl/src/ffi/: device.rs  interface.rs  macros.rs  mod.rs  port.rs  system.rs
gentl/src/imp/: genapi_common.rs  mod.rs  port.rs
impl/: Cargo.toml  README.md
impl/macros/: Cargo.toml
impl/macros/src/: lib.rs  memory.rs  register_map.rs  util.rs
impl/src/: bit_op.rs  bytes_io.rs  lib.rs  memory.rs
impl/tests/: runner.rs
impl/tests/macros/: bitfield.rs  forbidden_visibility.rs  forbidden_visibility.stderr  memory.rs  register.rs  visibility.rs  wrong_access_right.rs  wrong_access_right.stderr  wrong_endianness.rs  wrong_endianness.stderr  wrong_init_array.rs  wrong_init_array.stderr
(+141 files in other folders)
