[package]
name = "cameleon-device"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"

[dependencies]
thiserror = "1.0.20"
log = "0.4.11"
semver = "0.9.0"
byteorder = "1.3.4"

async-std = {version = "1.6.2", features = ["unstable"]}
futures = "0.3.5"
lazy_static = "1.4.0"

# Dependencies for libusb vision device driver
rusb = { version = "0.6.2", optional = true }

[features]
default = ["libusb"]

libusb = ["rusb"]

[[example]]
name = "usb3_device_enumeration"
path = "examples/usb3/device_enumeration.rs"
required-features = ["libusb"]

[[example]]
name = "usb3_device_control"
path = "examples/usb3/device_control.rs"
required-features = ["libusb"]
