[package]
name = "cameleon-device"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"

[dependencies]
thiserror = "1.0.20"
log = "0.4.11"
semver = "0.9.0"
byteorder = "1.3.4"

# Dependencies for libusb.
rusb = { version = "0.6.2", optional = true }

# Dependencies for emulator.
async-std = { version = "1.6.2", features = ["unstable"], optional = true }
futures = { version = "0.3.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }
rand = { version = "0.7.3", optional = true }

[features]
libusb = ["rusb"]

emulator = ["async-std", "futures", "lazy_static", "rand"]

[[example]]
name = "usb3_device_enumeration"
path = "examples/usb3/device_enumeration.rs"
required-features = ["libusb"]

[[example]]
name = "usb3_device_control"
path = "examples/usb3/device_control.rs"
required-features = ["libusb"]

[[example]]
name = "usb3_emulator"
path = "examples/usb3/emulator.rs"
required-features = ["emulator"]
