[package]
name = "cameleon-gentl"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
semver = "0.11.0"
url = "2.1.1"
libc = "0.2"
lazy_static = "1.4.0"

cameleon-impl = { path = "../cameleon-impl" }
cameleon = { path = "../cameleon" }

[features]
libusb = ["cameleon/libusb"]
