[package]
name = "cameleon-impl"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"
autotests = false
publish = false


[dependencies]
cameleon-impl-macros = { path = "macros" }
thiserror = "1.0.20"
byteorder = "1.3.4"


[dev-dependencies]
trybuild = { version = "1.0.34", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/runner.rs"
