[package]
name = "cameleon-impl"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"
publish = false


[dependencies]
cameleon-impl-macros = { path = "macros" }
thiserror = "1.0.20"
byteorder = "1.3.4"
roxmltree = "0.13.0"
regex = "1.3.9"
lazy_static = "1.4.0"

[dev-dependencies]
trybuild = { version = "1.0.34", features = ["diff"] }
