[package]
name = "cameleon-impl"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"
publish = false


[dependencies]
cameleon-impl-macros = { path = "macros" }
cameleon-impl-genapi-parser = { path = "genapi-parser" }
thiserror = "1.0.20"
byteorder = "1.3.4"
semver = "0.11.0"

[dev-dependencies]
trybuild = { version = "1.0.34", features = ["diff"] }
