[package]
name = "cameleon"
version = "0.1.9"
authors = ["Cameleon Project Developers"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/cameleon-rs/cameleon/tree/main/cameleon"
repository = "https://github.com/cameleon-rs/cameleon"
description = """
cameleon is a safe, fast, and flexible library for GenICam compatible cameras.
"""
categories = ["computer-vision"]
keywords = ["genicam", "camera", "usb3", "gige", "uvc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
semver = "1.0.0"
zip = "0.6.0"
sha-1 = "0.10.0"
async-channel = "1.7.0" # 1.7.0 has added recv_blocking()
tracing = "0.1.26"
auto_impl = "1.0.1"
cameleon-device = { path = "../device", version = "0.1.9" }
cameleon-genapi = { path = "../genapi", version = "0.1.9" }
anyhow = "1.0.40"

[dev-dependencies]
trybuild = "1.0.42"

[features]
libusb = ["cameleon-device/libusb"]

[[example]]
name = "u3v_register_map"
path = "examples/u3v/register_map.rs"
required-features = ["libusb"]

[[example]]
name = "stream"
path = "examples/stream.rs"
required-features = ["libusb"]

[[example]]
name = "params"
path = "examples/params.rs"
required-features = ["libusb"]

[[example]]
name = "no_cache"
path = "examples/no_cache.rs"
required-features = ["libusb"]

[[example]]
name = "custom_ctxt"
path = "examples/custom_ctxt.rs"
required-features = ["libusb"]

[package.metadata.docs.rs]
all-features = true
