[package]
name = "cameleon-device"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
thiserror = "1.0.24"
log = "0.4.14"
semver = "1.0.0"
byteorder = "1.4.3"
async-std = { version = "1.9.0", features = ["unstable"] }
const_format = "0.2.14"
futures = "0.3.14"
lazy_static = "1.4.0"
rand = "0.8.3"
cameleon-impl = { path = "../impl" }

# Dependencies for libusb.
rusb = { version = "0.8.0", optional = true }

[dev-dependencies]
trybuild = "1.0.42"

[features]
libusb = ["rusb"]

[[example]]
name = "u3v_device_enumeration"
path = "examples/u3v/device_enumeration.rs"
required-features = ["libusb"]

[[example]]
name = "u3v_device_control"
path = "examples/u3v/device_control.rs"
required-features = ["libusb"]
