[package]
name = "cameleon-device"
version = "0.1.1"
edition = "2018"
authors = ["Cameleon Project Developers"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/cameleon-rs/cameleon/tree/main/device"
repository = "https://github.com/cameleon-rs/cameleon"
description = """
cameleon-device provides device specific protocol decoders and basic I/O operations for GenICam compatible devices.
"""
categories = ["computer-vision"] 
keywords = ["genicam", "camera", "usb3", "gige", "uvc"]

[dependencies]
thiserror = "1.0.24"
log = "0.4.14"
semver = "1.0.0"
async-std = { version = "1.9.0", features = ["unstable"] }
const_format = "0.2.14"
futures = "0.3.14"
lazy_static = "1.4.0"
rand = "0.8.3"
cfg-if = "1.0.0"
cameleon-impl = { path = "../impl", version = "0.1.0" }

rusb = { version = "0.9.0", optional = true }
libusb1-sys = { version = "0.5.0", optional = true }
libc = { version = "0.2", optional = true }


[dev-dependencies]
trybuild = "1.0.42"

[features]
libusb = ["rusb", "libusb1-sys", "libc"]

[[example]]
name = "u3v_device_enumeration"
path = "examples/u3v/device_enumeration.rs"
required-features = ["libusb"]

[[example]]
name = "u3v_device_control"
path = "examples/u3v/device_control.rs"
required-features = ["libusb"]

[package.metadata.docs.rs]
all-features = true
