[package]
name = "cameleon-device"
version = "0.1.14"
edition = "2018"
authors = ["Cameleon Project Developers"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/cameleon-rs/cameleon/tree/main/device"
repository = "https://github.com/cameleon-rs/cameleon"
description = """
cameleon-device provides device specific protocol decoders and basic I/O operations for GenICam compatible devices.
"""
categories = ["computer-vision"]
keywords = ["genicam", "camera", "usb3", "gige", "uvc"]

[dependencies]
thiserror = "1.0.24"
log = "0.4.14"
semver = "1.0.0"
cfg-if = "1.0.0"
cameleon-impl = { path = "../impl", version = "0.1.14" }

nusb = { version = "0.2.0", optional = true }

[dev-dependencies]
trybuild = "1.0.42"

[features]
usb = ["nusb"]
libusb = ["usb"]

[[example]]
name = "u3v_device_enumeration"
path = "examples/u3v/device_enumeration.rs"
required-features = ["usb"]

[[example]]
name = "u3v_device_control"
path = "examples/u3v/device_control.rs"
required-features = ["usb"]

[package.metadata.docs.rs]
all-features = true
