[package]
name = "cameleon-genapi"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
thiserror = "1.0.20"
string-interner = "0.12"
auto_impl = "0.4"
tracing = "0.1"
