[package]
name = "cameleon-genapi"
version = "0.1.1"
edition = "2018"
authors = ["Cameleon Project Developers"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/cameleon-rs/cameleon/tree/main/genapi"
repository = "https://github.com/cameleon-rs/cameleon"
description = """
cameleon-genapi provides parser and interpreter of GenApi XML.
"""
categories = ["computer-vision", "parser-implementations"] 
keywords = ["genicam", "camera", "genapi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
thiserror = "1.0.24"
string-interner = "0.13.0"
auto_impl = "0.4.1"
tracing = "0.1.26"
ambassador = "0.2.1"
