[package]
name = "cameleon-gentl"
version = "0.1.9"
authors = ["Cameleon Project Developers"]
edition = "2018"
license = "MPL-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
semver = "1.0.0"
url = "2.2.1"
libc = "0.2.94"
lazy_static = "1.4.0"
const_format = "0.2.14"

cameleon-impl = { path = "../impl" }
cameleon = { path = "../cameleon", features = ["libusb"] }

[lib]
crate-type = ["cdylib"]
