[package]
name = "cameleon-impl"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"
publish = false
license = "MPL-2.0"


[dependencies]
cameleon-impl-macros = { path = "macros" }
thiserror = "1.0.24"
byteorder = "1.4.3"
semver = "1.0.0"

[dev-dependencies]
trybuild = { version = "1.0.42", features = ["diff"] }
