[package]
name = "cameleon-impl"
version = "0.1.9"
edition = "2018"
authors = ["Cameleon Project Developers"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/cameleon-rs/cameleon/tree/main/impl"
repository = "https://github.com/cameleon-rs/cameleon"
description = "Utilities used by other cameleon crates implementation."
categories = ["computer-vision"]
keywords = ["genicam", "camera"]


[dependencies]
cameleon-impl-macros = { path = "macros", version = "0.1.9" }
thiserror = "1.0.24"
semver = "1.0.0"

[dev-dependencies]
trybuild = { version = "1.0.42", features = ["diff"] }
