[package]
name = "cameleon-impl-macros"
version = "0.1.9"
authors = ["Cameleon Project Developers"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/cameleon-rs/cameleon/tree/main/impl/macros"
repository = "https://github.com/cameleon-rs/cameleon"
description = "Utilities used by other cameleon crates implementation."
categories = ["computer-vision"]
keywords = ["genicam", "camera"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.72", features = ["full"] }
proc-macro2 = "1.0.26"
quote = "1.0.9"
